--- a/index.html
+++ b/index.html
@@ -50,5 +50,19 @@
             </tr>
         </tbody>
      </table>
+     <br>
+     <img src="Imagenes/problema tuyo papi.jpeg" alt="rana" width="300"> <!--Para agregar imagenes y su anchura-->
+     <form action="#"><!--Paquete para mandar # es mandarlo a si mismo-->
+        <label for="">Nombre</label><!--Indicacion para la cajita de texto-->
+        <input type="text" placeholder="Nombre Completo"><!--Cajita de texto, placeholder es una indicacion que va dentro de la cajita-->
+        <br>
+        <input type="number"> <br>
+        <input type="date"> <br>
+        <input type="color"> <br>
+        <input type="file"> <br>
+        <input type="time"> <br>
+        <input type="submit"> <br>
+        <input type="password" name="Clave" placeholder="Tu clave" > <br>
+     </form>
 </body>
 </html>
