--- a/index.html
+++ b/index.html
@@ -1,68 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Pagina HTML</title>
+    <title>Práctica 01 CSS3</title>
 </head>
 <body>
-    Texto dentro <br> <!--Espacio de linea-->
-    de la pagina 
-    <p> <!--Parrafo-->
-     Texto dentro 
-     de la pagina 
-     </p>
-     <hr> <!--Linea que atraviesa toda la pantalla-->
-     <h1>Encabezado</h1>
-     <h2>Encabezado</h2> <!--Encabezados de diferentes tamanos-->
-     <h3>Encabezado</h3>
-     <h4>Encabezado</h4>
-     <h5>Encabezado</h5>
-     <h6>Encabezado</h6>
-     <a href="https://culiacan.tecnm.mx">Clic para abrir</a> <!---Link para reemplazar una pagina por otra-->
-     <a href="https://culiacan.tecnm.mx" target="_blank">Clic para abrir</a> <!---Link para abrir pagina nueva-->
-     <ul> <!--Lista desordenada-->
-        <li>elemento 1</li> <!--Elementos de lista con punto-->
-        <li>elemento 2</li>
-        <li>elemento 3</li>
-     </ul>
-     <ol> <!--Lista ordeada con numeros-->
-        <li>elemento</li>      
-        <li>elemento</li>
-        <li>elemento</li>
-     </ol>
-     <br>
-     <table>
-        <caption>Titulo de la tabla</caption>
-        <thead> <!--Encabezado de tabla-->
-            <tr> <!--Renglon de tabla-->
-                <th>Columna 1</th>
-                <th>Columna 2</th>
-                <th colspan="2">Columna 3</th> <!--Con eso abarca dos espacios de tabla-->
-            </tr> 
-        </thead>
-        <tbody>
-            <tr>
-                <td>Contenido 1</td> <!--Contenido tabla-->
-                <td>Contenido 2</td>
-                <td>Contenido 3</td>
-                <td>Contenido 4</td> <!--Si no hay columna 4 se pone el contenido sin encabezado-->
-            </tr>
-        </tbody>
-     </table>
-     <br>
-     <img src="Imagenes/problema tuyo papi.jpeg" alt="rana" width="300"> <!--Para agregar imagenes y su anchura-->
-     <form action="#"><!--Paquete para mandar # es mandarlo a si mismo-->
-        <label for="">Nombre</label><!--Indicacion para la cajita de texto-->
-        <input type="text" placeholder="Nombre Completo"><!--Cajita de texto, placeholder es una indicacion que va dentro de la cajita-->
-        <br>
-        <input type="number"> <br>
-        <input type="date"> <br>
-        <input type="color"> <br>
-        <input type="file"> <br>
-        <input type="time"> <br>
-        <input type="submit"> <br>
-        <input type="password" name="Clave" placeholder="Tu clave" > <br>
-     </form>
+    
 </body>
 </html>
